# callforge

./: .env.example  .gitignore  Dockerfile  FINETUNE_RUNBOOK.md  GPU_SERVER.md  README.md  ROADMAP_FINETUNE.md  ROADMAP_LLM_LOCAL.md  ROADMAP_VOZ.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  render.yaml  voice_server.py
scripts/: ab_source_voice.py  build_voice_bank.py  cartesia_clone.py  cartesia_smoke.py  ci.ps1  diarize.py  e2e_probe.py  extract_voice.py  finetune_refund.py  gen_refund_dataset.py  gpu_remote.ps1  install-local-deploy.ps1  install-voice-service.ps1  install-windows-service.ps1  model_bakeoff.py  ollama_speed.ps1  pipeline_smoke.py  probe_embeddings.py  probe_model.py  refund_eval.py  runpod_gpu.py  smoke_cascade.py  smoke_companion.py  smoke_memory.py  smoke_post_restart.py  smoke_service.py  smoke_stream.py  smoke_uncensored.py  smoke_voice.py  smoke_voice_prod.py  test_chatterbox.py  test_openvoice_vc.py  test_qwen3_tts.py  uncensored_bakeoff.py  voice_ab.py
src/callforge/: __init__.py  config.py
src/callforge/agents/: base.py  escalation_agent.py  prompts.py  quality_agent.py  router_agent.py  summarizer_agent.py  support_agent.py  troubleshooting_agent.py
src/callforge/application/: dtos.py  unit_of_work.py
tests/: conftest.py  test_api.py  test_audit_fixes.py  test_conversation_flow.py  test_escalation.py  test_knowledge.py  test_llm_fallback.py  test_memory.py  test_migrations.py  test_multi_tenant.py  test_personas.py  test_resolution_steps.py  test_router_agent.py  test_tts_normalize.py  test_voice.py  test_webchat.py
(+48 files in other folders)
