[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "callforge"
version = "0.1.0"
description = "Multi-agent customer support automation platform (call center) - FastAPI + Clean Architecture"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
voice = ["kokoro-onnx>=0.4", "soundfile>=0.12"]
postgres = ["psycopg2-binary>=2.9"]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
